cli/tests/snapshots/cli_snapshot_tests__inference_serve_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
assertion_line: 89
expression: stdout
---
Run the provider-side server.

Fronts an OpenAI-compatible upstream behind SomaPay-authorized `/v1/chat/completions`. Backends today: openrouter, vast.

Usage: soma inference serve [OPTIONS] --config <CONFIG>

Options:
      --config <CONFIG>
          Path to the provider TOML config (carries the model catalog + backend selection — no chain config)

      --address <ADDRESS>
          Address whose key signs both on-chain ops and HTTP vouchers. Defaults to the wallet's active address

      --client <CLIENT>
          Path to the soma client config (defaults to ~/.soma/client.yaml)

      --soma-home <SOMA_HOME>
          Soma home (for the per-channel provider ledger). Defaults to ~/.soma

      --heartbeat-interval-secs <HEARTBEAT_INTERVAL_SECS>
          Heartbeat interval — `UpdateProvider` is sent on chain at this cadence so off-chain liveness watchers see a fresh `registered_at_ms`
          
          [default: 600]

  -h, --help
          Print help (see a summary with '-h')

EXAMPLE:
    soma inference serve --config provider.toml
