cli/tests/snapshots/cli_snapshot_tests__model_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Manage models (commit, reveal, update, deactivate, query)

Usage: soma model [OPTIONS] <COMMAND>

Commands:
  create               Create a new model (step 1 of create-commit-reveal)
  commit               Commit model weights (step 2 of create-commit-reveal)
  reveal               Reveal model weights (step 3 of create-commit-reveal)
  deactivate           Deactivate a model (owner only)
  info                 Display model information
  list                 List all registered models
  set-commission-rate  Set commission rate for the next epoch (owner only)
  download             Download model weights from the validator network
  help                 Print this message or the help of the given subcommand(s)

Options:
      --json  Output as JSON
  -h, --help  Print help

EXAMPLES:
    soma model list
    soma model info 0xMODEL_ID
    soma model commit 0xMODEL_ID --weights-url-commitment 0xHEX... \
        --weights-commitment 0xHEX... --architecture-version 1 \
        --stake-amount 100 --staking-pool-id 0xPOOL_ID
    soma model reveal 0xMODEL_ID --weights-url https://... \
        --weights-checksum 0xHEX... --weights-size 1024 \
        --decryption-key 0xHEX... --embedding 0.1,0.2,0.3
    soma model deactivate 0xMODEL_ID
    soma model download 0xMODEL_ID --output ./weights.bin
