cli/tests/snapshots/cli_snapshot_tests__object_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Query on-chain objects by owner or ID, or transfer one to a recipient

Usage: soma object [OPTIONS] <COMMAND>

Commands:
  get       Get a specific object by ID
  list      List all objects owned by an address
  transfer  Transfer an object to a recipient
  help      Print this message or the help of the given subcommand(s)

Options:
      --json  Output as JSON
  -h, --help  Print help

EXAMPLES:
    soma object list
    soma object get 0xOBJECT_ID
    soma object transfer 0xOBJECT_ID 0xRECIPIENT
