cli/tests/snapshots/cli_snapshot_tests__objects_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Query on-chain objects by owner or ID

Usage: soma objects [OPTIONS] <COMMAND>

Commands:
  get   Get a specific object by ID
  list  List all objects owned by an address
  help  Print this message or the help of the given subcommand(s)

Options:
      --json  Output as JSON
  -h, --help  Print help

EXAMPLES:
    soma objects list
    soma objects get 0xOBJECT_ID
