cli/tests/snapshots/cli_snapshot_tests__pay_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
[deprecated: use `transfer`] Pay SOMA to multiple recipients

Usage: soma pay [OPTIONS] --recipients <RECIPIENTS>... --amounts <AMOUNTS>...

Options:
      --recipients <RECIPIENTS>...      Recipient addresses
      --amounts <AMOUNTS>...            Amounts to send to each recipient (in SOMA, e.g., 1 or 0.5)
      --coins <COINS>...                Input coin object IDs (auto-selected if not provided)
      --tx-digest                       Compute the transaction digest and print it out, but do not execute
      --simulate                        Perform a dry run (simulation) of the transaction, without executing it
      --serialize-unsigned-transaction  Serialize the unsigned transaction data (base64) instead of executing. Use with `soma tx execute-signed --tx-bytes <TX_BYTES>`
      --serialize-signed-transaction    Serialize the signed transaction data (base64) instead of executing. Use with `soma tx execute-combined-signed --signed-tx-bytes <SIGNED_TX_BYTES>`
      --json                            Output as JSON
  -h, --help                            Print help
