cli/tests/snapshots/cli_snapshot_tests__proxy_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Run the local agent-facing inference proxy

Listens on `127.0.0.1:<port>` and speaks the OpenAI API. Agents point at it via `OPENAI_BASE_URL`. The proxy discovers providers, picks one per model, and signs vouchers per request.

Usage: soma proxy [OPTIONS] --indexer-url <INDEXER_URL>

Options:
      --address <ADDRESS>
          Address whose key signs both on-chain ops and HTTP vouchers. Defaults to the wallet's active address

      --client <CLIENT>
          Path to the soma client config (defaults to ~/.soma/client.yaml)

      --soma-home <SOMA_HOME>
          Soma home (for the off-chain provider registry + per-channel client state). Defaults to ~/.soma

      --listen <LISTEN>
          HTTP listen address
          
          [default: 127.0.0.1:11434]

      --default-deposit-micros <DEFAULT_DEPOSIT_MICROS>
          Default deposit (micros) when lazily opening a new channel
          
          [default: 5000000]

      --provider-cache-ttl-secs <PROVIDER_CACHE_TTL_SECS>
          Provider-list cache TTL (seconds)
          
          [default: 30]

      --routing <ROUTING>
          Provider-routing mode: `price` (default) or `weighted`. `weighted` requires reputation from the indexer
          
          [default: price]

      --indexer-url <INDEXER_URL>
          GraphQL HTTP endpoint of the indexer. Required: provider discovery and (in `weighted` mode) reputation are sourced from here

      --trusted-providers-url <TRUSTED_PROVIDERS_URL>
          HTTP endpoint of the points service that publishes the per-season authorized-providers allowlist (e.g. `https://points.soma.org`). When set, the proxy refreshes the allowlist periodically and skips routing to any provider not on it. somacode defaults to ON via the `points.soma.org` endpoint; set `--include-untrusted` to opt out

      --trusted-providers-refresh-secs <TRUSTED_PROVIDERS_REFRESH_SECS>
          Refresh interval (seconds) for the trusted-providers snapshot. Defaults to 10 minutes — short enough to pick up a fresh authorization quickly without hammering the points service
          
          [default: 600]

      --include-untrusted
          Disable the trusted-providers filter entirely. Routes through every provider that satisfies the price / SLA filters regardless of authorization status. Use this in localnet, in tests, and when running with a custom `--indexer-url` whose providers aren't on the public points list

      --prewarm-model <PREWARM_MODEL>
          On boot, after discovery surfaces a provider for this model, pre-open a payment channel against it — so the first user request doesn't pay the ~3–5 s channel-open latency. Omit to keep the lazy-on-first-request behaviour

  -h, --help
          Print help (see a summary with '-h')

EXAMPLE:
    soma proxy --listen 127.0.0.1:11434 --indexer-url ...
