cli/tests/snapshots/cli_snapshot_tests__send_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
[deprecated: use `transfer`] Send SOMA to a recipient

Usage: soma send [OPTIONS] --to <TO> --amount <AMOUNT>

Options:
      --to <TO>                         Recipient address or alias
      --amount <AMOUNT>                 Amount to send in SOMA (e.g., 1 or 0.5)
      --coin <COIN>                     Specific coin to send from (auto-selected if not provided)
      --tx-digest                       Compute the transaction digest and print it out, but do not execute
      --simulate                        Perform a dry run (simulation) of the transaction, without executing it
      --serialize-unsigned-transaction  Serialize the unsigned transaction data (base64) instead of executing. Use with `soma tx execute-signed --tx-bytes <TX_BYTES>`
      --serialize-signed-transaction    Serialize the signed transaction data (base64) instead of executing. Use with `soma tx execute-combined-signed --signed-tx-bytes <SIGNED_TX_BYTES>`
      --json                            Output as JSON
  -h, --help                            Print help
