cli/tests/snapshots/cli_snapshot_tests__stake_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Stake SOMA with a validator

Usage: soma stake [OPTIONS] --validator <VALIDATOR> --amount <AMOUNT>

Options:
      --validator <VALIDATOR>           Validator address to stake with
      --amount <AMOUNT>                 Amount to stake in SOMA, debited from your SOMA balance
      --tx-digest                       Compute the transaction digest and print it out, but do not execute
      --simulate                        Perform a dry run (simulation) of the transaction, without executing it
      --serialize-unsigned-transaction  Serialize the unsigned transaction data (base64) instead of executing. Use with `soma tx execute-signed --tx-bytes <TX_BYTES>`
      --serialize-signed-transaction    Serialize the signed transaction data (base64) instead of executing. Use with `soma tx execute-combined-signed --signed-tx-bytes <SIGNED_TX_BYTES>`
      --json                            Output as JSON
  -h, --help                            Print help

EXAMPLES:
    soma stake --validator 0xVAL... --amount 10
