cli/tests/snapshots/cli_snapshot_tests__start_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Start a long-running service (localnet, validator, provider, proxy)

Usage: soma start <COMMAND>

Commands:
  localnet   Start a local SOMA network for development and testing
  validator  Start a validator node from a config file
  provider   Run the provider-side inference daemon (formerly `soma inference serve`)
  proxy      Run the local agent-facing inference proxy (formerly `soma inference proxy`)
  help       Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

EXAMPLES:
    soma start localnet --force-regenesis
    soma start validator --config validator.yaml
    soma start provider --config provider.toml
    soma start proxy --indexer-url ...
