cli/tests/snapshots/cli_snapshot_tests__start_localnet_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Start a local SOMA network for development and testing

Launches local validators and a fullnode. State is persisted in ~/.soma/ by default, or use --force-regenesis for an ephemeral network that starts fresh each time.

Usage: soma start localnet [OPTIONS]

Options:
      --network.config <CONFIG_DIR>
          Config directory that will be used to store network config, node db, keystore

      --force-regenesis
          A new genesis is created each time this flag is set, and state is not persisted between runs

      --fullnode-rpc-port <FULLNODE_RPC_PORT>
          Port to start the Fullnode RPC server on. Default port is 9000
          
          [default: 9000]

      --epoch-duration-ms <EPOCH_DURATION_MS>
          Set the epoch duration. Can only be used when `--force-regenesis` flag is passed

      --no-full-node
          Start the network without a fullnode

      --committee-size <COMMITTEE_SIZE>
          Set the number of validators in the network

      --log-level <LOG_LEVEL>
          Log level for CLI output (trace, debug, info, warn, error)
          
          [default: info]

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
    soma start localnet --force-regenesis
